2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* WelcomePage.addin.xml: Bumped MD version.

2010-03-18  Lluis Sanchez Gual  <lluis@novell.com>

	* WelcomePageView.cs: Use the new status bar model.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* WelcomePage.csproj:
	* gtk-gui/gui.stetic:
	* WelcomePageView.cs:
	* WelcomePageWidget.cs:
	* WelcomePage.addin.xml:
	* WelcomePageCommands.cs:
	* WelcomePageOptionPanel.cs: Merged MD.Projects into MD.Core,
	  and MD.Projects.Gui, MD.Core.Gui and MD.Components into
	  MD.Ide.

2010-03-08  Lluis Sanchez Gual  <lluis@novell.com>

	* WelcomePageView.cs: Track api changes.

2010-02-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* WelcomePage.csproj: Restore makefile integration.

2010-02-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* WelcomePage.xsl:
	* WelcomePage.css:
	* gtk-gui/gui.stetic:
	* WelcomePageView.cs:
	* WelcomePage.csproj:
	* gtk-gui/objects.xml:
	* WelcomePageWidget.cs:
	* XslGettextCatalog.cs:
	* WelcomePageCommands.cs:
	* WelcomePageFallbackWidget.cs:
	* gtk-gui/MonoDevelop.WelcomePage.WelcomePageWidget.cs:
	* gtk-gui/MonoDevelop.WelcomePage.WelcomePageFallbackWidget.cs:
	  Remove the dead HTML abstraction.

2010-02-12  Michael Hutchinson  <mhutchinson@novell.com>

	* md-bg.png:
	* md-logo.png:
	* Makefile.am:
	* mono-bg.png:
	* mono-logo.png:
	* WelcomePage.csproj:
	* mono-decoration.png:
	* WelcomePageFallbackWidget.cs: Split up the bg image so it
	  can be rendered full width no matter how wide window is.
	  Remove unused images.

	* gtk-gui/gui.stetic: Flush.

2010-01-28  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.WelcomePage.WelcomePageFallbackWidget.cs:
	  Flush.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* WelcomePage.addin.xml: Bump MD version.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* WelcomePage.csproj: